%% title: ERD 04a2 - Specification / Test / User Manual
%% Module: SIC Requirement / Analysis / Design / Diagram / Specification / Test (part 2 of 2, see erd-04a1-requirement-diagram.mmd for Requirement/Diagram)
%% NOTE: All entities extend BaseEntity or BaseBusinessEntity (Lombok @Data), which contribute these audit/base
%%       columns not repeated per-entity below: id (PK, UUID), created_by, created_date, updated_by, updated_date,
%%       is_delete, delete_by, delete_date, rowVersion (xmin). BaseBusinessEntity additionally adds business_id (UUID).
%%       Only business-specific columns are listed in each entity box.
%% NOTE: Relationships marked "(inferred)" come from a plain *_id UUID column that follows FK naming convention but
%%       has NO @ManyToOne/@JoinColumn mapping in the Java source (no JPA object graph, DB-level FK only/assumed).
%%       Relationships marked "(mapped)" come from an actual @ManyToOne/@JoinColumn in the entity.

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PmSpecification {
        UUID id
        UUID business_id
        string specification_code
        string specification_type
        string title
        string version
        string status
        string priority
        string owner
        int estimated_manday
        text description
        uuid upload_group_id
        uuid project_id
        uuid requirement_id
        boolean is_active
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmTestScenario {
        UUID id
        UUID business_id
        uuid project_id
        uuid test_plan_id
        uuid task_id
        string scenario_code
        string scenario_name
        string priority
        string status
        string test_type
        text description
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmTestCase {
        UUID id
        UUID business_id
        uuid project_id
        uuid scenario_id
        string scenario_name
        uuid task_id
        string test_case_code
        string title
        string priority
        text test_step
        text expected_result
        text actual_result
        string test_status
        string test_type
        string tester
        datetime test_date
        text related_requirement
        text related_spec
        text related_task
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmUserManual {
        UUID id
        UUID business_id
        uuid project_id
        string manual_code
        string manual_title
        string manual_type
        string version
        uuid related_spec_id
        uuid delivery_id
        string status
        uuid attachment_group_id
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmUserManualSection {
        UUID id
        uuid manual_id
        string section_code
        string section_title
        text content
        int sort_order
        text permission_roles
        uuid screenshot_group_id
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmTestScenario ||--o{ PmTestCase : "has test cases (scenario_id)"

    PmUserManual ||--o{ PmUserManualSection : "has sections (manual_id, inferred)"
